--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,16 @@
 body {
   font-size: 18px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
 
 .book-list-row {
@@ -69,4 +79,47 @@ body {
   width: 100px;
   border: 3px solid black;
   border-radius: 0px;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  border: solid 2px black;
+  border-radius: 8px;
+  padding: 12px 12px;
+  margin: 12px 12px;
+}
+
+.nav-list {
+  display: flex;
+  gap: 20px;
+  margin: 0;
+}
+
+.nav-list li {
+  padding: 0px 20px;
+  border-right: 2px solid black;
+}
+
+.nav-list li:last-child {
+  border-right: 0px;
+}
+
+.awsome-book {
+  font-size: 20px;
+  color: black;
+}
+
+.nav-item {
+  font-size: 20px;
+  color: black;
+}
+
+.nav-item:hover {
+  color: rgb(102, 102, 234);
+}
+
+.time {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px;
 }
