--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ li {
   margin-top: 20px;
   margin-bottom: 50px;
   text-align: center;
+  display: none;
 }
 
 .table-book-list {
@@ -56,9 +57,11 @@ li {
   text-align: right;
 }
 
-.add-book-row h2 {
+.add-book-row h2,
+.contact h2 {
   font-weight: 900;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 #book-form {
@@ -91,7 +94,6 @@ li {
 
 .nav-list {
   display: flex;
-  gap: 20px;
   margin: 0;
 }
 
@@ -114,6 +116,10 @@ li {
   color: black;
 }
 
+.nav-active {
+  color: green;
+}
+
 .nav-item:hover {
   color: rgb(102, 102, 234);
 }
@@ -122,4 +128,12 @@ li {
   display: flex;
   justify-content: flex-end;
   padding-right: 10px;
+}
+
+.contact {
+  display: none;
+}
+
+.contact ul li {
+  list-style: disc;
 }
