--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ li {
   font-weight: 900;
   text-align: center;
   margin-bottom: 20px;
+  font-size: 34px;
 }
 
 .booklist-table button {
@@ -62,6 +63,7 @@ li {
   font-weight: 900;
   margin-bottom: 20px;
   text-align: center;
+  font-size: 34px;
 }
 
 #book-form {
@@ -132,8 +134,31 @@ li {
 
 .contact {
   display: none;
+  margin-top: 20px;
 }
 
 .contact ul li {
   list-style: disc;
+}
+
+.content-active {
+  display: block;
+}
+
+.content-inactive {
+  display: none;
+}
+
+.footer {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  height: 50px;
+  text-align: center;
+  line-height: 42px;
+  right: 10px;
+  border-radius: 10px;
+  border: 3px solid black;
+  display: flex;
+  justify-content: center;
 }
